# vilchain

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Perf.c  README.md  RELEASE_NOTES.md  ROAD_MAP.md  SECURITY.md  SUPPORT.md
.github/workflows/: rust.yml
app/: package.json
app/src/: index.js
app/src/static/: index.html
app/src/static/pages/: docs.html
app/src/static/script/: util.js
app/src/static/styles/: globals.css
chain/: Cargo.toml  chain.toml
chain/data/config/: wallet.json
chain/explorer/: components.json  package.json  vite.config.ts
chain/src/explorer/: Cargo.toml
chain/src/node/: Cargo.toml
chain/src/node/src/: env.rs  lib.rs  main.rs
chain/src/node/src/eventloop/: mod.rs
chain/src/node/src/utils/: mod.rs
chain/src/node/src/ws/: mod.rs
chain/src/structure/: Cargo.toml
chain/src/structure/src/: lib.rs
chain/src/structure/src/block/: mod.rs
chain/src/structure/src/chain/: mod.rs
chain/src/structure/src/txn/: mod.rs  non_publishable_txn.rs  publishable_txn.rs
chain/src/utils/: Cargo.toml
chain/src/utils/src/: commandline.rs  hash.rs  lib.rs
chain/src/wallet/: Cargo.toml
chain/src/wallet/src/: actions.rs  cred.rs  filer.rs  lib.rs  main.rs
chain/src/wallet/src/term/: app.rs  mod.rs  tui.rs  ui.rs  update.rs
chain/src/wallet/src/utils/: banner.rs  mod.rs
demo/: README.md  main.py  requirements.txt
docs/: next.config.js  package.json  tailwind.config.js
docs/src/: index.html
docs/src/app/: layout.tsx  page.tsx
docs/src/blogs/: 01.md
docs/src/components/Footer/: index.tsx
docs/src/components/Heading/: index.tsx
docs/src/components/Navbar/: MenuList.ts  index.tsx
docs/src/script/: nav.js
docs/src/styles/: globals.css
explorer/: bun.lockb  package-lock.json  package.json
explorer/backend/: Cargo.toml
explorer/frontend/: package.json
explorer/src/: App.tsx  main.tsx
explorer/src/components/: Card.tsx  Footer.tsx  Header.tsx  Navbar.tsx  SEO.tsx  Sidebar.tsx  Table.tsx
explorer/src/hooks/: useToggle.tsx
explorer/src/pages/: Home.tsx
explorer/src/pages/Dashboard/: index.tsx
explorer/src/pages/Form/: FormElements.tsx
explorer/src/routes/: index.ts
scripts/: .env.example  containerize.sh  setup.sh
validator/: .env.example  Cargo.toml
validator/src/common/: Cargo.toml
validator/src/common/src/: lib.rs
validator/src/common/src/Txn/: builder.rs  mod.rs
validator/src/common/src/block/: builder.rs  mod.rs
validator/src/common/src/txn/: builder.rs  mod.rs
validator/src/server/: Cargo.toml
validator/src/server/src/: env.rs  lib.rs  main.rs
validator/src/server/src/routes/: health.rs  mod.rs
validator/src/server/src/routes/node/: mod.rs
vilchain-docs/: astro.config.mjs  package.json
vilchain-docs/src/content/docs/: index.mdx
wallet/: Cargo.toml
wallet/src/: cred.rs  filer.rs  main.rs
web/: .gitignore  astro.config.mjs  components.json  package.json
web/src/: index.html
web/src/app/: layout.tsx  page.tsx
web/src/app/(landing)/: layout.tsx
web/src/app/(website)/: layout.tsx
web/src/app/blogs/: layout.tsx  page.tsx
web/src/app/docs/: layout.tsx  page.tsx
web/src/app/styles/: globals.css
web/src/components/Footer/: index.tsx
web/src/components/Navbar/: index.tsx
web/src/components/custom/AppMenuBar/: MenuList.ts  index.tsx
web/src/components/layout/: Footer.svelte  Navbar.svelte
web/src/components/layout/AppMenuBar/: MenuList.ts  index.tsx
web/src/components/ui/: dialog.tsx
web/src/content/blogs/: 1.mdx
web/src/hooks/: useToggle.tsx
web/src/layouts/: Blog.astro  Docs.astro  Website.astro  WebsiteLayout.astro
web/src/pages/: index.astro
