[package]
name = "node"
version = "0.1.0"
edition = "2021"
default-run = "node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
pretty_env_logger = "0.5.0"
serde_json = { workspace = true }
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.20"

# structure
structure = { path = "../structure" }
