[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.21.0"
serde = { workspace = true }
criterion = "0.5.1"
dotenv = "0.15.0"
envy = "0.4.2"
structure = { path = "../structure" }
