[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
bip39 = { workspace = true }
ratatui = "0.23.0"
secp256k1 = { version = "0.28.0", features = ["rand-std", "serde"] }
crossterm = "0.27.0"

structure = { path = "../structure" }
utils = { path = "../utils" }
