[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
structure = { path = "../structure" }
bip39 = "2.0.0"
rand = "0.8.5"
rsa = "0.9.6"
