[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { workspace = true }
serde_json = "1.0.104"
sqlx = { version = "0.7.2", features = ["runtime-tokio"] }
